helmcharts/ingress/ingress-rule.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: helloworld-ingress
    namespace: default
    annotations:
      cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - apollo-helloworld.vangahari.ml
      secretName: letsencrypt
  rules:
      - host: apollo-helloworld.vangahari.ml
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: python-app-external-service
                  port:
                    number: 80
